--- a/bazel5/python/2-pipdeps/WORKSPACE
+++ b/bazel5/python/2-pipdeps/WORKSPACE
@@ -9,12 +9,12 @@ http_archive(
     url = "https://github.com/bazelbuild/rules_python/releases/download/0.20.0/rules_python-0.20.0.tar.gz",
 )
 
-load("@rules_python//python:repositories.bzl", "py_repositories")
+load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")
+
 py_repositories()
 
 # pip dependencies
 load("@rules_python//python:pip.bzl", "pip_parse")
-load("@rules_python//python:repositories.bzl", "python_register_toolchains")
 
 python_register_toolchains(
     name = "python3_9",
@@ -27,6 +27,12 @@ load("@python3_9//:defs.bzl", "interpreter")
 
 pip_parse(
     name = "pip_deps",
-    python_interpreter = interpreter,
-    requirements = ":requirements_lock.txt",
+    python_interpreter_target = interpreter,
+    requirements_lock = "//:requirements_lock.txt",
 )
+
+# Load the starlark macro which will define your dependencies.
+load("@pip_deps//:requirements.bzl", "install_deps")
+
+# Call it to define repos for your requirements.
+install_deps()
