--- a/bazel6/rules_cc/3-aspect-gcc-toolchain/.bazelrc
+++ b/bazel6/rules_cc/3-aspect-gcc-toolchain/.bazelrc
@@ -1,2 +1,3 @@
 build --incompatible_enable_cc_toolchain_resolution
 build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
+build --cxxopt='-std=c++14'
