--- a/bazel6/rules_oci/BUILD.bazel
+++ b/bazel6/rules_oci/BUILD.bazel
@@ -3,11 +3,11 @@ load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
 oci_image(
     name = "hello_ubuntu",
     base = "@ubuntu22",
-    entrypoint = ["lsb_release", "-a"],
+    entrypoint = ["cat", "/etc/os-release"],
 )
 
 oci_tarball(
     name = "hello_ubuntu_tar",
     image = ":hello_ubuntu",
-    repo_tags = ["latest"],
+    repo_tags = ["hello:latest"],
 )
