--- a/bazel6/rules_oci/BUILD.bazel
+++ b/bazel6/rules_oci/BUILD.bazel
@@ -1,25 +1,14 @@
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
-load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
 
 oci_image(
     name = "hello_ubuntu",
     base = "@ubuntu22",
-    entrypoint = ["lsb_release", "-a"],
+    entrypoint = ["cat", "/etc/os-release"],
     tars = [":hello_tar"],
 )
 
 oci_tarball(
     name = "hello_ubuntu_tar",
     image = ":hello_ubuntu",
-    repo_tags = ["latest"],
-)
-
-sh_binary(
-    name = "hello",
-    srcs = ["hello.sh"],
-)
-
-pkg_tar(
-    name = "hello_tar",
-    srcs = [":hello"],
+    repo_tags = ["hello:latest"],
 )
