--- a/bazel6/rules_cc/4-zig-hermetic-cc-toolchain/BUILD.bazel
+++ b/bazel6/rules_cc/4-zig-hermetic-cc-toolchain/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@rules_cc//cc:defs.bzl", "cc_binary")
 
 cc_binary(
-    name = "cc_version",
-    srcs = ["cc_version.cc"],
+    name = "main",
+    srcs = ["main.cc"],
 )
