--- a/bazel6/rules_go/2-gazelle/BUILD.bazel
+++ b/bazel6/rules_go/2-gazelle/BUILD.bazel
@@ -1,10 +1,12 @@
 load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
 
+# gazelle:proto file
+
 gazelle_binary(
     name = "gazelle_binary",
     languages = [
-        "@bazel_gazelle//language/go:go_default_library",
         "@bazel_gazelle//language/proto:go_default_library",
+        "@bazel_gazelle//language/go:go_default_library",
     ],
 )
 
