--- a/bazel6/rules_go/2-gazelle/example/protos/BUILD.bazel
+++ b/bazel6/rules_go/2-gazelle/example/protos/BUILD.bazel
@@ -1,7 +1,24 @@
 load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 proto_library(
-    name = "echo_proto",
+    name = "echo_service_proto",
     srcs = ["echo_service.proto"],
+    visibility = ["//visibility:public"],
+)
+
+go_proto_library(
+    name = "echo_service_go_proto",
+    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
+    importpath = "github.com/juaniquer/bazel-examples/example/protos",
+    proto = ":echo_service_proto",
+    visibility = ["//visibility:public"],
+)
+
+go_library(
+    name = "protos",
+    embed = [":echo_service_go_proto"],
+    importpath = "github.com/juaniquer/bazel-examples/example/protos",
     visibility = ["//visibility:public"],
 )
