--- a/bazel7/distroless_repro/base_images/debian_rules_distroless/debian.yaml
+++ b/bazel7/distroless_repro/base_images/debian_rules_distroless/debian.yaml
@@ -1,18 +1,16 @@
-#  Anytime this file is changed, the lockfile needs to be regenerated.
+#  To generate the debian.lock.json run the following command
 #
-#  To generate the bullseye.lock.json run the following command
-#
-#     bazel run @bullseye//:lock
+#     bazel run @debian_rules_distroless//:lock
 #
 # See debian_package_index at WORKSPACE.bazel
 version: 1
 
 sources:
-  - channel: bullseye main
+  - channel: bookworm main
     url: https://snapshot-cloudflare.debian.org/archive/debian/20240401T150053Z
-  - channel: bullseye-security main
+  - channel: bookworm-security main
     url: https://snapshot-cloudflare.debian.org/archive/debian-security/20240401T150053Z
-  - channel: bullseye-updates main
+  - channel: bookworm-updates main
     url: https://snapshot-cloudflare.debian.org/archive/debian/20240401T150053Z
 
 archs:
@@ -21,3 +19,4 @@ archs:
 
 packages:
     - "python3"
+    - "python3.11-minimal"
